# vest-technical-test

./: README.md  docker-compose.yml
api_service/: Cargo.toml  Dockerfile
api_service/src/: graphql.rs  lib.rs  main.rs  services.rs
api_service/src/graphql/: mod.rs  mutation.rs  query.rs  types.rs
api_service/src/services/: mod.rs  order_service.rs
api_service/tests/: graphql_tests.rs
event_processing_service/: Cargo.toml  Dockerfile
event_processing_service/src/: main.rs
postgresql/: schema.sql
