[package]
name = "api_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.6"
async-graphql-warp = "6.0.7"
async-graphql = "6.0.7"
reqwest = {version = "0.11.20", features = ["rustls-tls", "json"]}
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.10"
log = "0.4.20"
pretty_env_logger = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rdkafka = "0.34.0"