[package]
name = "event_processing_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"
tokio-postgres = "0.7.10"
rdkafka = "0.34.0"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"